<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#64b5f6"
    tools:context="com.example.konstantin.playergamekm.MainActivity">


<LinearLayout

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <!--tools:context="com.example.konstantin.playergamekm.MainActivity">
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"-->


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#64b5f6">

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/p1_NameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/p1_NameTextView"
            android:layout_weight="1"
            android:textSize="20dp"
            android:textAlignment="center"
            android:textStyle="normal|bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/p2_NameTextView"
            android:layout_weight="1"
            android:textSize="20dp"
            android:textAlignment="center"
            android:textStyle="normal|bold"
            android:text="@string/p2_NameTextView" />
    </LinearLayout>

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
            android:layout_margin="15dp">
            <Button
                android:text="@string/buttonStartGame"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:id="@+id/buttonStartGame"
                android:layout_margin="5dp"
                android:textSize="18dp"
                android:textColor="#ffffff"
                android:background="@drawable/roundedplaybutton"
                android:textAllCaps="false" />
            <Button
                android:text="@string/buttonSelectPlayer"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:id="@+id/buttonSelectPlayer"
                android:layout_margin="5dp"
                android:textSize="18dp"
                android:textColor="#ffffff"
                android:background="@drawable/roundedplaybutton"
                android:textAllCaps="false" />

            <Button
                android:text="@string/buttonAddPlayer"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:id="@+id/buttonAddPlayer"
                android:textSize="18dp"
                android:textColor="#ffffff"
                android:layout_margin="5dp"
                android:background="@drawable/roundedplaybutton"
                android:textAllCaps="false" />

            <Button
                android:text="@string/buttonViewScoreboard"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:id="@+id/buttonViewScoreboard"
                android:layout_margin="5dp"
                android:textSize="18dp"
                android:textColor="#ffffff"
                android:background="@drawable/roundedplaybutton"
                android:textAllCaps="false" />


        </LinearLayout>
</LinearLayout>

</ScrollView>
