<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_game_emulator"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.konstantin.playergamekm.GameEmulatorActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/gameEmulatorTitle"
            android:layout_width="match_parent"
            android:layout_height="50dp"

            android:text="Game Emulator"
            android:textSize="24sp"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:textAlignment="center"
            android:gravity="center_vertical"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="70dp">

        <TextView
            android:text="Player 1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/p1_NameTextView"
            android:layout_weight="1"
            android:textSize="20dp"
            android:textAlignment="center"
            android:textStyle="normal|bold" />

        <TextView
            android:text="Player 2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/p2_NameTextView"
            android:layout_weight="1"
            android:textSize="20dp"
            android:textAlignment="center"
            android:textStyle="normal|bold" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:text="@string/playerOneWins"
            android:layout_width="wrap_content"
            android:layout_height="110dp"
            android:id="@+id/buttonPlayerOneWins"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:textSize="24dp"
            android:padding="20dp"
            android:layout_margin="10dp"
            android:textAlignment="center"/>

        <Button
            android:text="@string/playerTwoWins"
            android:layout_width="wrap_content"
            android:layout_height="110dp"
            android:id="@+id/buttonPlayerTwoWins"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:textSize="24dp"
            android:padding="20dp"
            android:layout_margin="10dp"
            android:textAlignment="center"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="160dp"
            android:layout_height="100dp"
            android:id="@+id/buttonTie"
            android:textAllCaps="false"
            android:textSize="24dp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="@string/buttonTie" />


    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:text="@string/buttonQuitGame"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:id="@+id/buttonQuitGame"
            android:layout_gravity="right"
            android:textColor="@android:color/background_light"/>
    </LinearLayout>
</LinearLayout>
</ScrollView>